[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Scripts/MenuManager.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/astronaut.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/hazards-box.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/hazards-baloon.png" type="Texture" id=4]

[node name="MenuManager" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 14.0
margin_top = 21.0
margin_right = 114.0
margin_bottom = 107.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 100.0
margin_bottom = 14.0

[node name="TextureRect" type="TextureRect" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 48.0
margin_bottom = 14.0
size_flags_horizontal = 3
texture = ExtResource( 2 )
stretch_mode = 4

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 52.0
margin_right = 100.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Logo"

[node name="Play" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 100.0
margin_bottom = 38.0
text = "Start Playing"
icon = ExtResource( 2 )
align = 0

[node name="Tutorial" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 100.0
margin_bottom = 62.0
text = "How to play"
icon = ExtResource( 3 )

[node name="Exit" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 66.0
margin_right = 100.0
margin_bottom = 86.0
text = "Exit"
icon = ExtResource( 4 )
align = 0
[connection signal="pressed" from="CenterContainer/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Tutorial" to="." method="_on_Tutorial_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
